--- a/reservame-Frontend/package.json
+++ b/reservame-Frontend/package.json
@@ -9,8 +9,10 @@
     "@mui/material": "^6.1.10",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "reservame": "file:",
@@ -39,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1"
   }
 }
