--- a/reservame-Frontend/package.json
+++ b/reservame-Frontend/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.7",
     "cra-template": "1.2.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.0.2",
