--- a/ReservaMe-Backend/reservame-backend/.gitignore
+++ b/ReservaMe-Backend/reservame-backend/.gitignore
@@ -32,6 +32,9 @@ MANIFEST
 *.manifest
 *.spec
 
+# requirements.txt
+requirements.txt
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
